syntax = "proto3";

package alvriket;

service ELFParser {
   rpc ParseELF (ParseELFRequest) returns (ParseELFReply) {}
}

message ParseELFRequest {
   // ELF file path.
   string elf_path = 1;
}

message ParseELFReply {
   // Number of sections.
   int32 nsects = 1;
}
